# swift-foundation

./: .gitignore  .spi.yml  .swift-format  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION_GUIDELINE.md  Distributions.md  EmbeddedSkipList.md  Evolution.md  Foundation_Build_Process.md  NNNN-Hindu-calendar-support-OOS.md  NOTICE.txt  Package.swift  Package@swift-5.8.swift  README.md  create_local  create_xcframework  linter-rules  linter-rules.json
Sources/: CMakeLists.txt
Sources/Foundation/: Foundation.swift
Sources/Foundation/Documentation.docc/: FoundationPreview.md
Sources/FoundationEssentials/: Android+Extensions.swift  AsyncLineSequence.swift  BuiltInUnicodeScalarSet.swift  Bundle+Stub.swift  CMakeLists.txt  CharacterSet+Stub.swift  CocoaError.swift  Codable.swift  CodableUtilities.swift  CodableWithConfiguration.swift  ComparisonResult.swift  Date.swift  DateInterval.swift  Decimal+Stub.swift  DoubleDouble.swift  EmbeddedMutexShim.swift  ErrorCodes+POSIX.swift  ErrorCodes.swift  FoundationEssentials.swift  IndexPath.swift  LockedState.swift  Logging.swift  Mutex+ExtendedLifetime.swift  OutputBuffer.swift  Platform.swift  Progress+Stub.swift  SortComparator.swift  Span+Utils.swift  String+Essentials.swift  StringBlocks.swift  StringProtocol+Essentials.swift  URL+Stub.swift  UTCClock.swift  UUID.swift  UUID_Wrappers.swift  UUIDv4.swift  WASILibc+Extensions.swift  WinSDK+Extensions.swift  _ThreadLocal.swift
Sources/FoundationEssentials/AttributedString/: AttributeContainer.swift  AttributeScope.swift  AttributedString+AttributeTransformation.swift  AttributedString+CharacterView.swift  AttributedString+Guts.swift  AttributedString+IndexTracking.swift  AttributedString+IndexValidity.swift  AttributedString+Runs+AttributeSlices.swift  AttributedString+Runs+Run.swift  AttributedString+Runs.swift  AttributedString+UTF16View.swift  AttributedString+UTF8View.swift  AttributedString+UnicodeScalarView.swift  AttributedString+_InternalRun.swift  AttributedString+_InternalRuns.swift  AttributedString+_InternalRunsSlice.swift  AttributedString.swift  AttributedStringAttribute.swift  AttributedStringAttributeConstrainingBehavior.swift  AttributedStringAttributeStorage.swift  AttributedStringCodable.swift  AttributedStringProtocol.swift  AttributedStringRunCoalescing.swift  AttributedSubstring.swift  CMakeLists.txt  Collection Stdlib Defaults.swift  Conversion.swift  DiscontiguousAttributedSubstring.swift  FoundationAttributes.swift  String.Index+ABI.swift
Sources/FoundationEssentials/Calendar/: CMakeLists.txt  Calendar.swift  CalendarConstants.swift  CalendarUtility.swift  Calendar_Astronomy.swift  Calendar_Autoupdating.swift  Calendar_Buddhist.swift  Calendar_Cache.swift  Calendar_Chinese.swift  Calendar_Enumerate.swift  Calendar_Gregorian.swift  Calendar_Gregorian_Autoupdating.swift  Calendar_Hebrew.swift  Calendar_Japanese.swift  Calendar_Protocol.swift  Calendar_Recurrence.swift  Date+FormatStyle.swift  Date+Locale.swift  DateComponents.swift  RecurrenceRule.swift
Sources/FoundationEssentials/Data/: CMakeLists.txt  Collections+DataProtocol.swift  ContiguousBytes.swift  Data+Base64.swift  Data+Bridging.swift  Data+Deprecated.swift  Data+Error.swift  Data+Iterator.swift  Data+Reading.swift  Data+Searching+BoyerMoore.swift  Data+Searching.swift  Data+Stub.swift  Data+Writing.swift  Data+WritingOptions.swift  Data.swift  DataProtocol.swift  FileSystemRepresentable.swift  PathOrURL.swift  Pointers+DataProtocol.swift
Sources/FoundationEssentials/Decimal/: CMakeLists.txt  Decimal+Compatibility.swift  Decimal+Conformances.swift  Decimal+Math.swift  Decimal.swift
Sources/FoundationEssentials/Documentation.docc/: FoundationEssentials.md
Sources/FoundationEssentials/Error/: CMakeLists.txt  CocoaError+FilePath.swift  CocoaError.swift  ErrorCodes+POSIX.swift  (+2 more)
Sources/FoundationInternals/: LockedState.swift
Sources/FoundationInternationalization/: BidiClass.swift  BinaryFloatingPoint.swift  BinaryInteger.swift  CMakeLists.txt  CharacterSet+Stub.swift  CocoaError+Stub.swift  CurrentBundle.swift  Date+ICU.swift  Date+Locale.swift  DateComponents.swift  Duration+Utils.swift  FoundationInternationalization.swift  Locale+Stub.swift  LockedState.swift  RangeExpression.swift  String+Locale.swift  TimeInterval+Utils.swift  URL+UnicodeLookalikeTable.swift  URLParser+ICU.swift  _FoundationInternals
Sources/FoundationMacros/: BundleMacro.swift  CMakeLists.txt  FoundationMacros.swift  PredicateMacro.swift
Sources/FoundationMacrosLinux/: FoundationMacrosLinux.swift
Sources/FoundationMacrosOrdo/: PredicateMacro.swift
Sources/NewCodable/: BlackHoleDecodable.swift  Borrow.swift  CodingError.swift  CodingFormatStyle.swift  CodingStrategies.swift  CodingStrategy.swift  CodingStrategyCombinators.swift  CodingStrategySyntax.swift  CommonCodablePrimitive.swift  CommonDecodableAdoption.swift  CommonDecodableProtocols.swift  CommonElement.swift  CommonEncodableAdoption.swift  CommonEncodableProtocols.swift  Exclusive.swift  FoundationAdditions.swift  GrowableEncodingBytes.swift  Macros.swift  SharedTypes.swift  Utilities.swift
Sources/NewCodableCompileSmokeTest/: JSONSmokeTest.swift
Sources/NewCodableMacros/: CodableAliasMacro.swift  CodableByMacro.swift  CodableDefaultMacro.swift  CodableNaming.swift  CodingKeyMacro.swift  CommonCodableMacro.swift  CommonDecodableMacro.swift  CommonEncodableMacro.swift  DecodableAliasMacro.swift  JSONCodableMacro.swift  JSONDecodableMacro.swift  JSONEncodableMacro.swift  NewCodableMacrosPlugin.swift  SharedMacroInfrastructure.swift
Sources/RustShims/: Cargo.toml  build.sh
Sources/TestSupport/: TestSupport.swift  Utilities+XCTest.swift  Utilities.swift  Utilitites.swift
Sources/_CShims/: CMakeLists.txt  data_shims.c  filemanager_shims.c  platform_shims.c  string_shims.c  uuid.c
Sources/_FoundationCShims/: CMakeLists.txt  platform_shims.c  process_shims.c  string_shims.c
Sources/_FoundationInternals/: BinaryFloatingPoint.swift  LockedState.swift
Sources/_FoundationInternationalizationData/: CMakeLists.txt  ListFormatData.c
(+810 files in other folders)
